--- a/package.json
+++ b/package.json
@@ -22,12 +22,279 @@
   },
   "homepage": "https://github.com/learn-co-curriculum/java-script-intro-to-functions-lab#readme",
   "devDependencies": {
-    "babel-core": "^6.11.4",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.9.0",
     "expect": "^1.20.2",
-    "jsdom": "^9.2.1",
-    "mocha": "5.2.0",
+    "jsdom": "^22.1.0",
+    "mocha": "^10.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "^1.1.3"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "abab": "^2.0.6",
+    "agent-base": "^6.0.2",
+    "ansi-colors": "^4.1.1",
+    "ansi-regex": "^2.1.1",
+    "ansi-styles": "^2.2.1",
+    "anymatch": "^3.1.3",
+    "argparse": "^2.0.1",
+    "array-buffer-byte-length": "^1.0.0",
+    "arraybuffer.prototype.slice": "^1.0.2",
+    "asynckit": "^0.4.0",
+    "available-typed-arrays": "^1.0.5",
+    "babel-code-frame": "^6.26.0",
+    "babel-generator": "^6.26.1",
+    "babel-helper-call-delegate": "^6.24.1",
+    "babel-helper-define-map": "^6.26.0",
+    "babel-helper-function-name": "^6.24.1",
+    "babel-helper-get-function-arity": "^6.24.1",
+    "babel-helper-hoist-variables": "^6.24.1",
+    "babel-helper-optimise-call-expression": "^6.24.1",
+    "babel-helper-regex": "^6.26.0",
+    "babel-helper-replace-supers": "^6.24.1",
+    "babel-helpers": "^6.24.1",
+    "babel-messages": "^6.23.0",
+    "babel-plugin-check-es2015-constants": "^6.22.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-plugin-transform-es2015-computed-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-duplicate-keys": "^6.24.1",
+    "babel-plugin-transform-es2015-for-of": "^6.23.0",
+    "babel-plugin-transform-es2015-function-name": "^6.24.1",
+    "babel-plugin-transform-es2015-literals": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-plugin-transform-es2015-object-super": "^6.24.1",
+    "babel-plugin-transform-es2015-parameters": "^6.24.1",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-plugin-transform-es2015-sticky-regex": "^6.24.1",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+    "babel-plugin-transform-es2015-typeof-symbol": "^6.23.0",
+    "babel-plugin-transform-es2015-unicode-regex": "^6.24.1",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-strict-mode": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "babel-template": "^6.26.0",
+    "babel-traverse": "^6.26.0",
+    "babel-types": "^6.26.0",
+    "babylon": "^6.18.0",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browser-stdout": "^1.3.1",
+    "call-bind": "^1.0.2",
+    "camelcase": "^6.3.0",
+    "chalk": "^1.1.3",
+    "chokidar": "^3.5.3",
+    "cliui": "^7.0.4",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^1.9.0",
+    "core-js": "^2.6.12",
+    "cssstyle": "^3.0.0",
+    "data-urls": "^4.0.0",
+    "debug": "^2.6.9",
+    "decamelize": "^4.0.0",
+    "decimal.js": "^10.4.3",
+    "define-data-property": "^1.1.0",
+    "define-properties": "^1.1.4",
+    "delayed-stream": "^1.0.0",
+    "detect-indent": "^4.0.0",
+    "diff": "^5.0.0",
+    "domexception": "^4.0.0",
+    "emoji-regex": "^8.0.0",
+    "entities": "^4.5.0",
+    "es-abstract": "^1.22.2",
+    "es-get-iterator": "^1.1.3",
+    "es-set-tostringtag": "^2.0.1",
+    "es-to-primitive": "^1.2.1",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "esutils": "^2.0.3",
+    "fill-range": "^7.0.1",
+    "find-up": "^5.0.0",
+    "flat": "^5.0.2",
+    "for-each": "^0.3.3",
+    "form-data": "^4.0.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "function.prototype.name": "^1.1.6",
+    "functions-have-names": "^1.2.3",
+    "get-caller-file": "^2.0.5",
+    "get-intrinsic": "^1.2.1",
+    "get-symbol-description": "^1.0.0",
+    "glob": "^7.2.0",
+    "glob-parent": "^5.1.2",
+    "globals": "^9.18.0",
+    "globalthis": "^1.0.3",
+    "gopd": "^1.0.1",
+    "has": "^1.0.3",
+    "has-ansi": "^2.0.0",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.0",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "he": "^1.2.0",
+    "home-or-tmp": "^2.0.0",
+    "html-encoding-sniffer": "^3.0.0",
+    "http-proxy-agent": "^5.0.0",
+    "https-proxy-agent": "^5.0.1",
+    "iconv-lite": "^0.6.3",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "internal-slot": "^1.0.5",
+    "invariant": "^2.2.4",
+    "is-arguments": "^1.1.1",
+    "is-array-buffer": "^3.0.2",
+    "is-arrow-function": "^2.0.3",
+    "is-async-function": "^2.0.0",
+    "is-bigint": "^1.0.4",
+    "is-binary-path": "^2.1.0",
+    "is-boolean-object": "^1.1.2",
+    "is-callable": "^1.2.7",
+    "is-date-object": "^1.0.5",
+    "is-equal": "^1.6.4",
+    "is-extglob": "^2.1.1",
+    "is-finalizationregistry": "^1.0.2",
+    "is-finite": "^1.1.0",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-function": "^1.0.10",
+    "is-glob": "^4.0.3",
+    "is-map": "^2.0.2",
+    "is-negative-zero": "^2.0.2",
+    "is-number": "^7.0.0",
+    "is-number-object": "^1.0.7",
+    "is-plain-obj": "^2.1.0",
+    "is-potential-custom-element-name": "^1.0.1",
+    "is-regex": "^1.1.4",
+    "is-set": "^2.0.2",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.12",
+    "is-unicode-supported": "^0.1.0",
+    "is-weakmap": "^2.0.1",
+    "is-weakref": "^1.0.2",
+    "is-weakset": "^2.0.2",
+    "isarray": "^2.0.5",
+    "js-tokens": "^3.0.2",
+    "js-yaml": "^4.1.0",
+    "jsesc": "^1.3.0",
+    "json5": "^0.5.1",
+    "locate-path": "^6.0.0",
+    "lodash": "^4.17.21",
+    "lodash.once": "^4.1.1",
+    "log-symbols": "^4.1.0",
+    "loose-envify": "^1.4.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "mkdirp": "^0.5.6",
+    "ms": "^2.0.0",
+    "nanoid": "^3.3.3",
+    "normalize-path": "^3.0.0",
+    "nwsapi": "^2.2.7",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.12.3",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.4",
+    "object.entries": "^1.1.7",
+    "object.getprototypeof": "^1.0.5",
+    "once": "^1.4.0",
+    "os-homedir": "^1.0.2",
+    "os-tmpdir": "^1.0.2",
+    "p-limit": "^3.1.0",
+    "p-locate": "^5.0.0",
+    "parse5": "^7.1.2",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "picomatch": "^2.3.1",
+    "private": "^0.1.8",
+    "psl": "^1.9.0",
+    "punycode": "^2.3.0",
+    "querystringify": "^2.2.0",
+    "randombytes": "^2.1.0",
+    "readdirp": "^3.6.0",
+    "reflect.getprototypeof": "^1.0.4",
+    "regenerate": "^1.4.2",
+    "regenerator-runtime": "^0.11.1",
+    "regenerator-transform": "^0.10.1",
+    "regexp.prototype.flags": "^1.5.1",
+    "regexpu-core": "^2.0.0",
+    "regjsgen": "^0.2.0",
+    "regjsparser": "^0.1.5",
+    "repeating": "^2.0.1",
+    "require-directory": "^2.1.1",
+    "requires-port": "^1.0.0",
+    "rrweb-cssom": "^0.6.0",
+    "safe-array-concat": "^1.0.1",
+    "safe-buffer": "^5.2.1",
+    "safe-regex-test": "^1.0.0",
+    "safer-buffer": "^2.1.2",
+    "saxes": "^6.0.0",
+    "serialize-javascript": "^6.0.0",
+    "set-function-name": "^2.0.1",
+    "side-channel": "^1.0.4",
+    "slash": "^1.0.0",
+    "source-map": "^0.5.7",
+    "source-map-support": "^0.4.18",
+    "stop-iteration-iterator": "^1.0.0",
+    "string-width": "^4.2.3",
+    "string.prototype.trim": "^1.2.8",
+    "string.prototype.trimend": "^1.0.7",
+    "string.prototype.trimstart": "^1.0.7",
+    "strip-ansi": "^3.0.1",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^2.0.0",
+    "symbol-tree": "^3.2.4",
+    "tmatch": "^2.0.1",
+    "to-fast-properties": "^1.0.3",
+    "to-regex-range": "^5.0.1",
+    "tough-cookie": "^4.1.3",
+    "tr46": "^4.1.1",
+    "trim-right": "^1.0.1",
+    "typed-array-buffer": "^1.0.0",
+    "typed-array-byte-length": "^1.0.0",
+    "typed-array-byte-offset": "^1.0.0",
+    "typed-array-length": "^1.0.4",
+    "unbox-primitive": "^1.0.2",
+    "universalify": "^0.2.0",
+    "url-parse": "^1.5.10",
+    "w3c-xmlserializer": "^4.0.0",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-encoding": "^2.0.0",
+    "whatwg-mimetype": "^3.0.0",
+    "whatwg-url": "^12.0.1",
+    "which-boxed-primitive": "^1.0.2",
+    "which-builtin-type": "^1.1.3",
+    "which-collection": "^1.0.1",
+    "which-typed-array": "^1.1.11",
+    "workerpool": "^6.2.1",
+    "wrap-ansi": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "ws": "^8.14.1",
+    "xml-name-validator": "^4.0.0",
+    "xmlchars": "^2.2.0",
+    "y18n": "^5.0.8",
+    "yargs": "^16.2.0",
+    "yargs-parser": "^20.2.4",
+    "yargs-unparser": "^2.0.0",
+    "yocto-queue": "^0.1.0"
   }
 }
